Updated post-build event

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,9 +161,11 @@ target_precompile_headers(
         src/PCH.h
 )
 
+set(OUTPUT_ROOT "$ENV{SkyrimAE_Mods}/${PROJECT_NAME}" CACHE STRING "")
+
 add_custom_command(
     TARGET ${PROJECT_NAME}
     POST_BUILD
-    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:${PROJECT_NAME}>" "G:/ModOrganizer/Games/SkyrimSE/mods/LibMathf/SKSE/Plugins/"
-    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "${CMAKE_SOURCE_DIR}/Scripts/Source/LibMathf.psc" "G:/ModOrganizer/Games/SkyrimSE/mods/LibMathf/Scripts/Source/LibMathf.psc"
+    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "$<TARGET_FILE:${PROJECT_NAME}>" "${OUTPUT_ROOT}/SKSE/Plugins/"
+    COMMAND "${CMAKE_COMMAND}" -E copy_if_different "${CMAKE_SOURCE_DIR}/Scripts/Source/${PROJECT_NAME}.psc" "${OUTPUT_ROOT}/Scripts/Source/${PROJECT_NAME}.psc"
 )
